--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Hello, I'm Mehthab.</h1>
+    <h2>I'm a learning web developer</h2>
     <script src="script.js"></script>
 </body>
 </html>
