--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 </head>
 <body>
     <div id="container">
-        <h1>Hello, I'm Mehthab.</h1>
+        <h1 class="glitchEffectRed">Hello, I'm Mehthab.</h1>
         <h2>I'm a developer</h2>
+        <div id="innerContainer">
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
