--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 <body>
     <div id="container">
         <h1 class="glitchEffectRed">Hello, I'm Mehthab.</h1>
-        <h2>I'm a developer</h2>
+        <h2>I'm a <span class="glitchEffectRedSmall">developer</span></h2>
         <div id="innerContainer">
         </div>
+        <div class="background">
+            <div class="square squareGreen">f</div>
+            <div class="squareViolet square"></div>
+        </div>
+
     </div>
     <script src="script.js"></script>
 </body>
