--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="innerContainer">
         </div>
         <div class="background">
-            <div class="square squareGreen">f</div>
+            <div class="square squareGreen"></div>
             <div class="squareViolet square"></div>
         </div>
 
