--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 <body>
     <div id="container">
         <h1 class="glitchEffectRed">Hello, I'm Mehthab.</h1>
-        <h2>I'm a <span class="glitchEffectRedSmall">developer</span></h2>
-        <div id="innerContainer">
+        <h3>I'm a <span class="glitchEffectRedSmall">developer</span></h2>
+        <div class="project">
+            <div class="project-text">
+                <h2>Project 1</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in interdum ipsum, id iaculis turpis. Cras volutpat vulputate justo vel cursus. Cras auctor viverra dignissim. Donec tempor enim venenatis, pulvinar dolor in, gravida elit. Quisque aliquam erat tortor, eget malesuada lectus vulputate non. Nullam id vulputate nisi. Pellentesque a luctus ipsum, ac porta ipsum. Quisque commodo purus purus, vitae dictum quam ultrices sit amet. Suspendisse non tempus nunc, nec mattis urna. Phasellus nec magna eu risus venenatis laoreet ut id mi. Praesent a pellentesque enim. Suspendisse feugiat ac nulla id posuere. Donec sagittis neque in nibh feugiat dictum.</p>
+            </div>
+            <img src="spanish-colors.png" alt="">
         </div>
         <div class="background">
             <div class="square squareGreen"></div>
