--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <div class="projects">
         <div class="project">
             <div class="project-text">
-                <h2>Project 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in interdum ipsum, id iaculis turpis. Cras volutpat vulputate justo vel cursus. Cras auctor viverra dignissim. Donec tempor enim venenatis, pulvinar dolor in, gravida elit. Quisque aliquam erat tortor, eget malesuada lectus vulputate non. Nullam id vulputate nisi. Pellentesque a luctus ipsum, ac porta ipsum. Quisque commodo purus purus, vitae dictum quam ultrices sit amet. Suspendisse non tempus nunc, nec mattis urna. Phasellus nec magna eu risus venenatis laoreet ut id mi. Praesent a pellentesque enim. Suspendisse feugiat ac nulla id posuere. Donec sagittis neque in nibh feugiat dictum.</p>
+                <h2 class="glitchEffectRedSmall" >Spanish Colors</h2>
+                <p>This was my first web dev project, hover over the colors to see what color is it</p>
+                <a href="url">Try out the site!</a>
+
             </div>
             <img src="spanish-colors.png" alt="">
         </div>
@@ -25,7 +27,7 @@
             <img src="spanish-colors.png" alt="">
 
             <div class="project-text">
-                <h2>Project 2</h2>
+                <h2 class="glitchEffectRedSmall">Project 2</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in interdum ipsum, id iaculis turpis. Cras volutpat vulputate justo vel cursus. Cras auctor viverra dignissim. Donec tempor enim venenatis, pulvinar dolor in, gravida elit. Quisque aliquam erat tortor, eget malesuada lectus vulputate non. Nullam id vulputate nisi. Pellentesque a luctus ipsum, ac porta ipsum. Quisque commodo purus purus, vitae dictum quam ultrices sit amet. Suspendisse non tempus nunc, nec mattis urna. Phasellus nec magna eu risus venenatis laoreet ut id mi. Praesent a pellentesque enim. Suspendisse feugiat ac nulla id posuere. Donec sagittis neque in nibh feugiat dictum.</p>
             </div>
         </div>
