added more projects

--- a/index.html
+++ b/index.html
@@ -14,23 +14,35 @@
         <h1 class="glitchEffectRed">Hello, I'm Mehthab.</h1>
         <h3>I'm a <span class="glitchEffectRedSmall">developer</span></h2>
         <div class="projects">
-        <div class="project">
+        <div class="project one">
             <div class="project-text">
                 <h2 class="glitchEffectRedSmall" >Spanish Colors</h2>
                 <p>This was my first web dev project, hover over the colors to see what color is it</p>
-                <a href="url">Try out the site!</a>
+                <a href="https://meht4b.github.io/spanish-colors/">Try out the site!</a>
 
             </div>
             <img src="spanish-colors.png" alt="">
         </div>
-        <div class="project">
-            <img src="spanish-colors.png" alt="">
+        <div class="project two text-right">
+            <img src="todo-list.png" alt="">
 
             <div class="project-text">
-                <h2 class="glitchEffectRedSmall">Project 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in interdum ipsum, id iaculis turpis. Cras volutpat vulputate justo vel cursus. Cras auctor viverra dignissim. Donec tempor enim venenatis, pulvinar dolor in, gravida elit. Quisque aliquam erat tortor, eget malesuada lectus vulputate non. Nullam id vulputate nisi. Pellentesque a luctus ipsum, ac porta ipsum. Quisque commodo purus purus, vitae dictum quam ultrices sit amet. Suspendisse non tempus nunc, nec mattis urna. Phasellus nec magna eu risus venenatis laoreet ut id mi. Praesent a pellentesque enim. Suspendisse feugiat ac nulla id posuere. Donec sagittis neque in nibh feugiat dictum.</p>
+                <h2 class="glitchEffectRedSmall">To-Do list</h2>
+                <p>second project made with html/css</p>
+                <a href="https://meht4b.github.io/todo-list/">visit the site!</a>
             </div>
         </div>
+        <div class="project three">
+
+            <div class="project-text">
+                <h2 class="glitchEffectRedSmall">Whatsapp Bootleg</h2>
+                <p>first interactive projective which uses javascript</p>
+                <a href="https://text-messenger.netlify.app/">Try the site!</a>
+            </div>
+                <img src="Document - Google Chrome 2024-08-11 23-04-37.gif" alt="">
+
+        </div>
+        
         </div>
         <div class="background">
             <div class="square squareGreen"></div>
