--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="container">
         <h1 class="glitchEffectRed">Hello, I'm Mehthab.</h1>
         <h3>I'm a <span class="glitchEffectRedSmall">developer</span></h2>
+        <p id="about">I'm a first year student at vit chennai. I have intermediate knowledge in python and basic knowledge in web dev</p>
         <div class="projects">
         <div class="project one">
             <div class="project-text">
@@ -48,6 +49,7 @@
             <div class="square squareGreen"></div>
             <div class="squareViolet square"></div>
         </div>
+        <div id="artificialPadding"></div>
 
     </div>
     <div id="mouseCursor"></div>
