--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 </head>
 <body>
     <div id="container">
+
         <h1 class="glitchEffectRed">Hello, I'm Mehthab.</h1>
         <h3>I'm a <span class="glitchEffectRedSmall">developer</span></h2>
         <p id="about">I'm a first year student at vit chennai. I have intermediate knowledge in python and basic knowledge in web dev</p>
+        <button type="button" id="pythonButton" class="languageButton">Python Projects</button>
+        <button type="button" id="webDevButton" class="languageButton">Web Dev Projects</button>
         <div class="projects">
         <div class="project one">
             <div class="project-text">
@@ -52,7 +55,7 @@
         <div id="artificialPadding"></div>
 
     </div>
-    <div id="mouseCursor"></div>
+    <div id ='customCursor' class="mouseCursor"></div>
 
     <script src="script.js"></script>
 </body>
