--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <h1 class="glitchEffectRed">Hello, I'm Mehthab.</h1>
         <h3>I'm a <span class="glitchEffectRedSmall">developer</span></h2>
         <p id="about">I'm a first year student at vit chennai. I have intermediate knowledge in python and basic knowledge in web dev</p>
-        <button type="button" id="pythonButton" class="languageButton">Python Projects</button>
         <button type="button" id="webDevButton" class="languageButton">Web Dev Projects</button>
-        <div class="projects">
+        <button type="button" id="pythonButton" class="languageButton">Python Projects</button>
+        <div id="webDevProjects">
         <div class="project one">
             <div class="project-text">
                 <h2 class="glitchEffectRedSmall" >Spanish Colors</h2>
@@ -25,10 +25,10 @@
                 <a href="https://meht4b.github.io/spanish-colors/">Try out the site!</a>
 
             </div>
-            <img src="spanish-colors.png" alt="">
+            <img src="project-images/spanish-colors.png" alt="">
         </div>
         <div class="project two text-right">
-            <img src="todo-list.png" alt="">
+            <img src="project-images/todo-list.png" alt="">
 
             <div class="project-text">
                 <h2 class="glitchEffectRedSmall">To-Do list</h2>
@@ -43,10 +43,21 @@
                 <p>first interactive projective which uses javascript</p>
                 <a href="https://text-messenger.netlify.app/">Try the site!</a>
             </div>
-                <img src="Document - Google Chrome 2024-08-11 23-04-37.gif" alt="">
+                <img src="project-images/Document - Google Chrome 2024-08-11 23-04-37.gif" alt="">
 
         </div>
         
+        </div>
+        <div id="pythonProjects">
+            <div class="project python-two">
+                <div class="project-text">
+                    <h2 class="glitchEffectRedSmall" >Text Messenger App</h2>
+                    <p>first attempt at making a gui program with tkinter, it uses mysql to store the messages and channels</p>
+                    <a href="https://meht4b.github.io/spanish-colors/">check out the repository</a>
+    
+                </div>
+                <img src="project-images/text-messenger-python.png" alt="">
+            </div>
         </div>
         <div class="background">
             <div class="square squareGreen"></div>
