--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
         
         </div>
         <div id="pythonProjects">
+                <div class="project python-on">
+                <div class="project-text">
+                    <h2 class="glitchEffectRedSmall" >Particle Simulation</h2>
+                    <p>first attempt at making a gui program with tkinter, it uses mysql to store the messages and channels</p>
+                    <a href="https://meht4b.github.io/spanish-colors/">check out the repository</a>
+    
+                </div>
+                <img src="project-images/text-messenger-python.png" alt="">
+            </div>
             <div class="project python-two">
                 <div class="project-text">
                     <h2 class="glitchEffectRedSmall" >Text Messenger App</h2>
